# ByeByeDPI-Windows

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN_DPI-PROBE.md  README.md  add.md  config.toml.example  dpi_detection.md  installer.nsi
docs/: IMPLEMENTATION_PLAN.md
docs/review/: IMPLEMENTATION_PLAN_review.md  deepseekflash_review.md  gemini_review.md  glm_review.md  kimi_review.md  meta_review.md  mimo_review.md  minimax3_review.md  qwen_review.md  sonnet_review.md
review/: IMPLEMENTATION_PLAN2.md
review2/: IMPLEMENTATION_PLAN_review2.md  claude2_review.md  deepseek2_review.md  gemini2_review.md  glm2_review.md  kimi2_review.md  meta_review2.md  mimo2_review.md  plan3.md  qwen2_review.md
review2/new/: ch_gen.rs  engine_mod.rs.patch  glm2_new_techniques_proposal (2).md  glm2_techniques_review.md  ip.rs.patch  rand.rs  readme.md  seq_spoof.rs.patch
src/: Cargo.toml
src/api/: Cargo.toml
src/api/src/: lib.rs
src/core/: Cargo.toml
src/core/src/: classifier.rs  config.rs  conntrack.rs  lib.rs  packet_engine.rs  proxy.rs  split_tunnel.rs
src/core/src/adaptive/: auto_tune.rs  ch_gen.rs  fallback.rs  hop_tab.rs  mod.rs  persist.rs  probe_tune_run.rs  seq_spoof.rs  strategy.rs  target_escalate.rs
src/core/src/config/: rule_override.rs
src/core/src/desync/: crypto.rs  group.rs  http.rs  ip.rs  mod.rs  obfs.rs  quic.rs  rand.rs  segment_plan.rs  tcp.rs  tls.rs
src/core/src/dns/: fakeip.rs  mod.rs  txid_tracker.rs
src/ffi-bridge/: Cargo.toml
src/service/: Cargo.toml
src/service/src/: main.rs
src/ui/src-tauri/: Cargo.toml
(+34 files in other folders)
